# parelag

./: CMakeLists.txt  COPYRIGHT  INSTALL  Makefile  Makefile.in.sample  README  README.md  configure_all.sh  configure_library.sh
cmake/: CMakeLists.txt  ParELAGConfig.cmake.in
cmake/modules/: CorrectWindowsPaths.cmake  FindElagMeshes.cmake  FindHYPRE.cmake  FindMARS.cmake  FindMATRED.cmake  FindMETIS.cmake  FindMFEM.cmake  FindPETSc.cmake  FindPackageMultipass.cmake  FindParMETIS.cmake  FindScaLAPACK.cmake  FindScotch.cmake  FindStrumpack.cmake  FindSuiteSparse.cmake  FindSuperLU.cmake  FindSuperLUDist.cmake  ParELAGCMakeUtilities.cmake  ParELAGTestForPrettyFunction.cmake  ResolveCompilerPaths.cmake
doc/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  Makefile  ParELAG_Config.h.in  ParELAG_Constants.hpp  elag.hpp  elag_typedefs.hpp
src/SPE10/: CMakeLists.txt  InversePermeabilityFunction.cpp  InversePermeabilityFunction.hpp
src/amge/: CMakeLists.txt  CochainProjector.cpp  CochainProjector.hpp  Coefficient.cpp  Coefficient.hpp  DOFAgglomeration.cpp  DOFAgglomeration.hpp  DeRhamSequence.cpp  DeRhamSequence.hpp  DeRhamSequenceFE.cpp  DeRhamSequenceFE.hpp  DofHandler.cpp  DofHandler.hpp  ElementalMatricesContainer.cpp  ElementalMatricesContainer.hpp  ElementalMatricesContainier.cpp  ElementalMatricesContainier.hpp  HybridHdivL2.cpp  HybridHdivL2.hpp  LocalSpectralTargets.cpp  LocalSpectralTargets.hpp  SequenceHierarchy.cpp  SequenceHierarchy.hpp  bilinIntegrators.cpp  bilinIntegrators.hpp  elag_amge.hpp
src/hypreExtension/: CMakeLists.txt  deleteZeros.c  hypreExtension.hpp  hypre_CSRFactory.c  hypre_ParAssembly.c  hypre_ParCSRDataTransformationSign.c  hypre_ParCSRMatrixCompare.c  hypre_ParCSRMatrixMatvecBoolInt.c  hypre_ParCSRMatrixNorms.c  par_Tmatmul.c  parcsr-add.c
src/linalg/: AuxHypreSmoother.cpp  AuxHypreSmoother.hpp  BlockLDL2x2.cpp  BlockLDL2x2.hpp  CMakeLists.txt  Eigensolver.cpp  Eigensolver.hpp  HypreExtension.cpp  HypreExtension.hpp  InnerProduct.cpp  InnerProduct.hpp  LDLCalculator.cpp  LDLCalculator.hpp  MA57BlockOperator.cpp  MA57BlockOperator.hpp  MLDivFree.cpp  MLDivFree.hpp  MLHiptmairSolver.cpp  MLHiptmairSolver.hpp  MatrixUtils.cpp  MatrixUtils.hpp  MultiVector.cpp  MultiVector.hpp  RankOneOperator.cpp  RankOneOperator.hpp  SVDCalculator.cpp  SVDCalculator.hpp  SubMatrixExtraction.cpp  SubMatrixExtraction.hpp  SymmetrizedUmfpack.cpp  SymmetrizedUmfpack.hpp  elag_linalg.hpp
src/linalg/dense/: CMakeLists.txt  ParELAG_DenseInverseCalculator.hpp  ParELAG_Eigensolver.cpp  ParELAG_Eigensolver.hpp  ParELAG_InnerProduct.cpp  ParELAG_InnerProduct.hpp  ParELAG_LAPACK.hpp  ParELAG_LAPACK_Helpers.hpp  ParELAG_LDLCalculator.cpp  ParELAG_LDLCalculator.hpp  ParELAG_MultiVector.cpp  ParELAG_MultiVector.hpp  ParELAG_QDQCalculator.cpp  ParELAG_QDQCalculator.hpp  ParELAG_SVDCalculator.cpp  ParELAG_SVDCalculator.hpp
src/linalg/deprecated/: BlockLDL2x2.cpp  BlockLDL2x2.hpp  IterativeSolverData.hpp  RankOneOperator.cpp  RankOneOperator.hpp
src/linalg/factories/: CMakeLists.txt  ParELAG_ADSSolverFactory.cpp  ParELAG_ADSSolverFactory.hpp  ParELAG_AMGeSolverFactory.cpp  ParELAG_AMGeSolverFactory.hpp  ParELAG_AMSSolverFactory.cpp  ParELAG_AMSSolverFactory.hpp  ParELAG_Block2x2GaussSeidelSolverFactory.cpp  ParELAG_Block2x2GaussSeidelSolverFactory.hpp  ParELAG_Block2x2JacobiSolverFactory.cpp  ParELAG_Block2x2JacobiSolverFactory.hpp  ParELAG_Block2x2LDUSolverFactory.cpp  ParELAG_Block2x2LDUSolverFactory.hpp  ParELAG_BoomerAMGSolverFactory.cpp  ParELAG_BoomerAMGSolverFactory.hpp  ParELAG_BramblePasciakFactory.cpp  ParELAG_BramblePasciakFactory.hpp  ParELAG_DirectSolverFactory.cpp  ParELAG_DirectSolverFactory.hpp  ParELAG_HiptmairSmootherFactory.cpp  ParELAG_HiptmairSmootherFactory.hpp  ParELAG_HybridizationSolverFactory.cpp  ParELAG_HybridizationSolverFactory.hpp  ParELAG_HypreSmootherFactory.cpp  ParELAG_HypreSmootherFactory.hpp  ParELAG_KrylovSolverFactory.cpp  ParELAG_KrylovSolverFactory.hpp  ParELAG_SchurComplementFactory.cpp  ParELAG_SchurComplementFactory.hpp  ParELAG_StationarySolverFactory.hpp
src/linalg/legacy/: CMakeLists.txt  ParELAG_AuxHypreSmoother.cpp  ParELAG_AuxHypreSmoother.hpp  ParELAG_HypreExtension.cpp  ParELAG_HypreExtension.hpp  ParELAG_MLDivFree.cpp  ParELAG_MLDivFree.hpp  ParELAG_MLHiptmairSolver.cpp  ParELAG_MLHiptmairSolver.hpp
src/linalg/solver_core/: CMakeLists.txt  (+13 more)
src/partitioning/: CMakeLists.txt  CartesianPartitioner.cpp  CartesianPartitioner.hpp  CoarsenMetisMaterialId.hpp  GeometricBoxPartitioner.cpp  GeometricBoxPartitioner.hpp  LinearPartition.cpp  LinearPartition.hpp  LogicalPartitioner.hpp  MFEMRefinedMeshPartitioner.cpp  MFEMRefinedMeshPartitioner.hpp  MetisGraphPartitioner.cpp  MetisGraphPartitioner.hpp  ParmetisGraphPartitioner.cpp  ParmetisGraphPartitioner.hpp  elag_partitioning.hpp
src/structures/: BooleanMatrix.cpp  BooleanMatrix.hpp  CMakeLists.txt  Coloring.hpp  GhostMap.cpp  GhostMap.hpp  ProcessorCoarsening.cpp  ProcessorCoarsening.hpp  Redistributor.cpp  Redistributor.hpp  SharedEntityCommunication.cpp  SharedEntityCommunication.hpp  SharingMap.cpp  SharingMap.hpp  connectedComponents.cpp  connectedComponents.hpp  elag_structures.hpp  minimalIntersectionSet.cpp  minimalIntersectionSet.hpp  transpose.cpp  transpose.hpp
src/topology/: AgglomeratedTopologyCheck.cpp  AgglomeratedTopologyCheck.hpp  CMakeLists.txt  Topology.cpp  Topology.hpp  TopologyTable.cpp  TopologyTable.hpp  Visualization.cpp  elag_topology.hpp
src/utilities/: CMakeLists.txt  HypreTraits.hpp  MPIDataTypes.hpp  MemoryUtils.hpp  ParELAG_DataTraits.hpp  ParELAG_Exceptions.hpp  ParELAG_Factory.hpp  ParELAG_Meta.hpp  ParELAG_ParameterList.cpp  ParELAG_ParameterList.hpp  ParELAG_SimpleXMLParameterListReader.cpp  ParELAG_SimpleXMLParameterListReader.hpp  ParELAG_TimeManager.cpp  ParELAG_TimeManager.hpp  ParELAG_Timer.hpp  ParELAG_VariableContainer.hpp  ParELAG_VectorTraits.hpp  ParELAG_Watch.hpp  Trace.cpp  Trace.hpp  UpscalingPieces.cpp  UpscalingPieces.hpp  elagError.cpp  elagError.hpp  elag_utilities.hpp  mars_utils.hpp  mpiUtils.cpp  mpiUtils.hpp
(+146 files in other folders)
